tests/machine/x/ocaml/in_operator_extended.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/in_operator_extended.ml", line 29, characters 18-38:
29 | let m : record1 = [("a",Obj.repr (1))]
                       ^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a list literal, the expected type is
       record1


Context (around line 29):
  27 | List.rev !__res0)
  28 | 
  29 | let m : record1 = [("a",Obj.repr (1))]
  30 | let s : string = "hello"
  31 | 
